<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="total_de_quilometro">Total de quilômetro</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="seu_gasto_total_ser_de">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="calcular">CALCULAR</string>
    <string name="valor_RS">R$ 0</string>
    <string name="preencha_todos_campos">Preencha todos os campos</string>
    <string name="informe_valores_validos">Por favor, informe valores válidos !</string>
</resources>